--- a/Semantics/Operational rules.tex
+++ b/Semantics/Operational rules.tex
@@ -1,77 +1,80 @@
 \documentclass{article}
-\title{Operational Semantics}
+\title{Regole di semantica operazionale per le operazioni su insiemi}
+\date{}
 \usepackage{mathtools}
 \usepackage{amssymb}
 \usepackage{empheq}
 \usepackage{proof}
 
 \begin{document}
+\maketitle
 \pagenumbering{gobble}
-\section{EmptySet}
+\section*{EmptySet}
 \begin{equation*}
 	\infer{EmptySet(T) \Rightarrow SetT(T, \varnothing)}{-}
 \end{equation*}
-\section{SingletonSet}
+\section*{SingletonSet}
 \begin{equation*}
 	\infer{SingletonSet(T, e) \Rightarrow SetT(T, \{v\})}{e \Rightarrow v:T}
 \end{equation*}
-\section{SetOf}
+\section*{SetOf}
 \begin{equation*}
-	\infer{SetOf(T, \{e_1...e_n\} \Rightarrow SetT(T, \{v_1...v_n\}}{e_1 \Rightarrow v_1:T & ... & e_n \Rightarrow v_n:T}
+	\infer{SetOf(T, \{e_1...e_n\}) \Rightarrow SetT(T, \{v_1...v_n\})}{e_1 \Rightarrow v_1:T & ... & e_n \Rightarrow v_n:T}
 \end{equation*}
-\section{SetPut}
+\section*{SetPut}
 \begin{equation*}
-	\infer{SetPut(e_1, e_2) \Rightarrow SetT(T, s \cap \{v\}}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow v:T}
+	\infer{SetPut(e_1, e_2) \Rightarrow SetT(T, s \cup \{v\})}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow v:T}
 \end{equation*}
-\section{SetRemove}
+\section*{SetRemove}
 \begin{equation*}
-	\infer{SetPut(e_1, e_2) \Rightarrow SetT(T, s \setminus \{v\}}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow v:T}
+	\infer{SetRemove(e_1, e_2) \Rightarrow SetT(T, s \setminus \{v\})}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow v:T}
 \end{equation*}
-\section{SetIsEmpty}
+\section*{SetIsEmpty}
 \begin{equation*}
 	\infer{SetIsEmpty(e) \Rightarrow Bool(s = \varnothing)}{e \Rightarrow SetT(T, s)}
 \end{equation*}
-\section{SetContains}
+\section*{SetContains}
 \begin{equation*}
 	\infer{SetContains(e_1, e_2) \Rightarrow Bool(v \in s)}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow v:T}
 \end{equation*}
-\section{SetIsSubset}
+\section*{SetIsSubset}
 \begin{equation*}
-	\infer{SetIsSubset(e_1, e_2) \Rightarrow Bool(s_1 \subset s_2)}{e_1 \Rightarrow SetT(T, s_1) & e_2 \Rightarrow SetT(T, s_2)}
+	\infer{SetIsSubset(e_1, e_2) \Rightarrow Bool(s_1 \subseteq s_2)}{e_1 \Rightarrow SetT(T, s_1) & e_2 \Rightarrow SetT(T, s_2)}
 \end{equation*}
-\section{SetMin}
+\section*{SetMin}
 \begin{equation*}
-	\infer{SetMin(e) \Rightarrow min(s):T}{e \Rightarrow SetT(T, s) & T \neq Closure(t)}
+	\infer{SetMin(e) \Rightarrow min(s):T}{e \Rightarrow SetT(T, s) & T \neq Closure(t,r)}
 \end{equation*}
-\section{SetMax}
+\section*{SetMax}
 \begin{equation*}
-	\infer{SetMin(e) \Rightarrow max(s):T}{e \Rightarrow SetT(T, s) & T \neq Closure(t)}
+	\infer{SetMax(e) \Rightarrow max(s):T}{e \Rightarrow SetT(T, s) & T \neq Closure(t,r)}
 \end{equation*}
-\section{ForAll}
+\section*{ForAll}
 \begin{equation*}
-	\infer{Forall(e_1, e_2) \Rightarrow Bool(\forall x \in s.\; Apply(f, x) \Rightarrow Bool(true))}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow f:T \rightarrow Bool}
+	\infer{Forall(e_1, e_2) \Rightarrow Bool(\forall x \in s.\; Apply(f, x) \Rightarrow Bool(true))}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow f:T \rightarrow Boolean}
 \end{equation*}
-\section{Exists}
+\section*{Exists}
 \begin{equation*}
-	\infer{Forall(e_1, e_2) \Rightarrow Bool(\exists x \in s.\; Apply(f, x) \Rightarrow Bool(true))}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow f:T \rightarrow Bool}
+	\infer{Exists(e_1, e_2) \Rightarrow Bool(\exists x \in s.\; Apply(f, x) \Rightarrow Bool(true))}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow f:T \rightarrow Boolean}
 \end{equation*}
-\section{Filter}
+\section*{Filter}
 \begin{equation*}
-	\infer{Filter(e_1, e_2) \Rightarrow SetT(T, \{x \in s : Apply(f, x) \Rightarrow Bool(true)\})}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow f:T \rightarrow Bool}
+	\infer{Filter(e_1, e_2) \Rightarrow SetT(T, \{x \in s : Apply(f, x) \Rightarrow Bool(true)\})}{e_1 \Rightarrow SetT(T, s) & e_2 \Rightarrow f:T \rightarrow Boolean}
 \end{equation*}
-\section{Map}
-\begin{equation*}	\infer{Filter(e_1, e_2) \Rightarrow SetT(T_2, \{Apply(f,x \in s)\})}{e_1 \Rightarrow SetT(T_1, s) & e_2 \Rightarrow f:T_1 \rightarrow T_2}
-\end{equation*}
-\section{SetUnion}
+\section*{Map}
 \begin{equation*}
-	\infer{SetUnion(e_1, e_2) \Rightarrow SetT(T, s_1 \cap s_2)}{e_1 \Rightarrow SetT(T, s_1) & e_2 \Rightarrow SetT(T, s_2)}
+	\infer{Map(e_1, e_2) \Rightarrow SetT(T_2, \{Apply(f,x \in s)\})}{e_1 \Rightarrow SetT(T_1, s) & e_2 \Rightarrow f:T_1 \rightarrow T_2}
 \end{equation*}
-\section{SetIntersection}
+\section*{SetUnion}
 \begin{equation*}
 	\infer{SetUnion(e_1, e_2) \Rightarrow SetT(T, s_1 \cup s_2)}{e_1 \Rightarrow SetT(T, s_1) & e_2 \Rightarrow SetT(T, s_2)}
 \end{equation*}
-\section{SetSubtraction}
+\section*{SetIntersection}
 \begin{equation*}
-	\infer{SetUnion(e_1, e_2) \Rightarrow SetT(T, s_1 \setminus s_2)}{e_1 \Rightarrow SetT(T, s_1) & e_2 \Rightarrow SetT(T, s_2)}
+	\infer{SetIntersection(e_1, e_2) \Rightarrow SetT(T, s_1 \cap s_2)}{e_1 \Rightarrow SetT(T, s_1) & e_2 \Rightarrow SetT(T, s_2)}
+\end{equation*}
+\section*{SetSubtraction}
+\begin{equation*}
+	\infer{SetSubtraction(e_1, e_2) \Rightarrow SetT(T, s_1 \setminus s_2)}{e_1 \Rightarrow SetT(T, s_1) & e_2 \Rightarrow SetT(T, s_2)}
 \end{equation*}
 \end{document}
